replacing office with program tab

--- a/data_entry/index.html
+++ b/data_entry/index.html
@@ -1,36 +1,5 @@
 <html lang="en">
-  <style>
-  .single {
-   height: 50px;
-  }
-  .help {
-   display: none;
-  }
-
-  #submitMenu {
-   display: none;
-  }
-  .checkBox {
-   height: 70px;
-   border: 1px solid;
-   overflow-y: auto;
-   text-align: left;
-  }
-  .lastRow {
-    text-align: center;
-  }
-  .ui-autocomplete {
-    max-height: 100px;
-    overflow-y: auto;
-    /* prevent horizontal scrollbar */
-    overflow-x: hidden;
-  }
-  .sortable {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  </style>
+  <link href="javascript/style/entry_form_style.css" rel="stylesheet">
   <head>
    <meta charset="UTF-8"> 
    <header class='darpa-header'><div class='darpa-header-images'><a href='http://www.darpa.mil/'><img class='darpa-logo' src='javascript/style/images/darpa-transparent-v2.png'></a><a href='index.html' class='programlink'><img    src='javascript/style/images/Open-Catalog-Single-Big.png'></a></div></header>
